[gd_scene load_steps=22 format=2]

[ext_resource path="res://ObjectsRelated/TilesRelated/BaseTileSet.tscn" type="PackedScene" id=1]
[ext_resource path="res://WorldRelated/AbstractWorldSlice.tscn" type="PackedScene" id=2]
[ext_resource path="res://ObjectsRelated/TilesRelated/TileAssets/UncollidablesTileSet.tres" type="TileSet" id=3]
[ext_resource path="res://ObjectsRelated/Pickupables/Subs/Coin/Pickupables_Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://WorldRelated/WorldSlices/Stage_Special001/Level04/WorldSlice_StageSpecial01_04.gd" type="Script" id=5]
[ext_resource path="res://ObjectsRelated/Portals/Portal.tscn" type="PackedScene" id=6]
[ext_resource path="res://AreaRegionRelated/Subs/PlayerCaptureAreaRegion/PlayerCaptureAreaRegion.tscn" type="PackedScene" id=7]
[ext_resource path="res://MiscRelated/VisualsRelated/KeyPressVisual/Visual_KeyPress.tscn" type="PackedScene" id=8]
[ext_resource path="res://ObjectsRelated/Objects/Imps/InteractableButton/Object_InteractableButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://AreaRegionRelated/Subs/ObjectDestroyingAreaRegion/ObjectDestroyingAreaRegion.tscn" type="PackedScene" id=10]
[ext_resource path="res://ObjectsRelated/Pickupables/Subs/LaunchBalls/Pickupable_LaunchBall.tscn" type="PackedScene" id=11]
[ext_resource path="res://MiscRelated/VisualsRelated/MousePressVisual/MousePressVisual_Img.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.25, 49 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.25, 31.25 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 29.5625, 28.5625 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 47.0625, 28.5625 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 35.5625, 51.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 32, 33.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 15.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 64.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 64, 11.625 )

[node name="WorldSlice_StageSpecial01_04" instance=ExtResource( 2 )]
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="BTS_Normal" parent="TileContainer" index="0" instance=ExtResource( 1 )]

[node name="BTS_Energized" parent="TileContainer" index="1" instance=ExtResource( 1 )]
energy_mode = 1

[node name="TileMap" parent="TileContainer/BTS_Energized" index="0"]
modulate = Color( 1, 0.968627, 0.172549, 1 )
tile_data = PoolIntArray( -720867, 14, 131075, -720866, 14, 131075, -655332, 14, 65540, -655329, 14, 65538, -589817, 14, 131075, -589816, 14, 131075, -589815, 14, 131075, -589814, 14, 131075, -589813, 14, 131075, -589812, 14, 131075, -589811, 14, 131075, -589810, 14, 131075, -589809, 14, 131075, -589808, 14, 131075, -589807, 14, 131075, -589806, 14, 131075, -589796, 14, 65540, -589793, 14, 65538, -524269, 14, 65538, -524260, 14, 65540, -524257, 14, 65538, -458733, 14, 65538, -458724, 14, 65540, -458721, 14, 65538, -393197, 14, 65538, -393188, 14, 65540, -393185, 14, 65538, -327669, 14, 65540, -327661, 14, 65538, -327652, 14, 65540, -327649, 14, 65538, -327648, 14, 131075, -327647, 14, 131075, -262133, 14, 65540, -262125, 14, 65538, -262116, 14, 65540, -262110, 14, 65538, -196597, 14, 65540, -196589, 14, 65538, -196580, 14, 65540, -196574, 14, 65538, -131071, 14, 131075, -131070, 14, 131075, -131069, 14, 131075, -131068, 14, 131075, -131067, 14, 131075, -131066, 14, 131075, -131065, 14, 131075, -131064, 14, 131075, -131063, 14, 131075, -131062, 14, 131075, -131061, 14, 131076, -131057, 14, 131075, -131056, 14, 131075, -131053, 14, 131075, -131052, 14, 131075, -131051, 14, 131075, -131050, 14, 131075, -131049, 14, 131075, -131048, 14, 131075, -131047, 14, 131075, -131046, 14, 131075, -131045, 14, 131075, -131044, 14, 65540, -131038, 14, 65538, -131037, 14, 131075, -131036, 14, 131075, -65536, 14, 65540, -65499, 14, 65538, 0, 14, 65540, 37, 14, 65538, 65536, 14, 65540, 65573, 14, 65538, 131072, 14, 65540, 131109, 14, 65538, 196608, 14, 65540, 196617, 14, 65540, 196627, 14, 65538, 196645, 14, 65538, 262144, 14, 65540, 262153, 14, 65540, 262163, 14, 65538, 262181, 14, 65538, 327680, 14, 65540, 327684, 14, 131075, 327685, 14, 131075, 327686, 14, 131075, 327687, 14, 131075, 327688, 14, 131075, 327689, 14, 131076, 327699, 14, 131075, 327700, 14, 131075, 327701, 14, 131075, 327702, 14, 131075, 327703, 14, 131075, 327704, 14, 131075, 327705, 14, 131075, 327706, 14, 131075, 327707, 14, 131075, 327708, 14, 131075, 327709, 14, 131075, 327710, 14, 131075, 327717, 14, 65538, 327718, 14, 131075, 327719, 14, 131075, 327720, 14, 131075, 327721, 14, 131075, 327722, 14, 131075, 327723, 14, 131075, 327724, 14, 131075, 327725, 14, 131075, 327726, 14, 131075, 327727, 14, 131075, 327728, 14, 131075, 327729, 14, 131075, 458723, 14, 65538, 458746, 14, 131075, 458747, 14, 131075, 458748, 14, 131075, 458749, 14, 131075, 393216, 14, 65540, 393247, 14, 65538, 524259, 14, 65538, 524281, 14, 65540, 524286, 14, 65538, 458752, 14, 65540, 458783, 14, 65538, 589795, 14, 65538, 589817, 14, 65540, 589822, 14, 65538, 524288, 14, 65540, 524319, 14, 65538, 524333, 14, 65538, 655331, 14, 65538, 655353, 14, 65540, 655359, 14, 131075, 589824, 14, 131075, 589855, 14, 65538, 589869, 14, 65538, 720867, 14, 65538, 720889, 14, 65540, 655364, 14, 3, 655365, 14, 3, 655366, 14, 3, 655367, 14, 3, 655368, 14, 3, 655369, 14, 4, 655376, 14, 2, 655377, 14, 3, 655378, 14, 3, 655379, 14, 3, 655380, 14, 3, 655381, 14, 3, 655382, 14, 3, 655383, 14, 3, 655384, 14, 3, 655385, 14, 3, 655386, 14, 3, 655387, 14, 3, 655388, 14, 3, 655389, 14, 3, 655390, 14, 3, 655397, 14, 65538, 655398, 14, 3, 655399, 14, 3, 655400, 14, 3, 655405, 14, 65538, 786403, 14, 65538, 786425, 14, 65540, 720905, 14, 65540, 720912, 14, 65538, 720933, 14, 65538, 720936, 14, 65540, 720941, 14, 65538, 851939, 14, 65538, 851961, 14, 65540, 786441, 14, 65540, 786448, 14, 65538, 786469, 14, 65538, 786472, 14, 65540, 786477, 14, 65538, 917475, 14, 65538, 917497, 14, 65540, 852005, 14, 65538, 852008, 14, 65540, 852013, 14, 65538, 982998, 14, 3, 982999, 14, 3, 983000, 14, 3, 983001, 14, 3, 983002, 14, 3, 983003, 14, 3, 983004, 14, 3, 983005, 14, 3, 983006, 14, 4, 983011, 14, 65538, 983033, 14, 65540, 917541, 14, 65538, 917544, 14, 65540, 917549, 14, 65538, 1048547, 14, 65538, 1048569, 14, 65540, 1048573, 14, 65538, 1048574, 14, 3, 1048575, 14, 3, 983040, 14, 3, 983077, 14, 65538, 983081, 14, 3, 983082, 14, 3, 983083, 14, 3, 983084, 14, 3, 1114083, 14, 65538, 1114105, 14, 65540, 1114109, 14, 65538, 1048576, 14, 65540, 1048613, 14, 65538, 1179619, 14, 65538, 1179641, 14, 65540, 1179645, 14, 65538, 1114113, 14, 3, 1114114, 14, 3, 1114115, 14, 3, 1114116, 14, 3, 1114117, 14, 3, 1114118, 14, 3, 1114119, 14, 3, 1114120, 14, 3, 1114121, 14, 3, 1114125, 14, 3, 1114126, 14, 3, 1114127, 14, 3, 1114128, 14, 3, 1114129, 14, 3, 1114130, 14, 3, 1114131, 14, 3, 1114132, 14, 3, 1114133, 14, 3, 1114134, 14, 3, 1114135, 14, 3, 1114136, 14, 3, 1114137, 14, 3, 1114138, 14, 3, 1114139, 14, 3, 1114140, 14, 3, 1114141, 14, 3, 1114142, 14, 3, 1114143, 14, 3, 1114144, 14, 3, 1114145, 14, 3, 1114146, 14, 3, 1114147, 14, 3, 1114148, 14, 3, 1245155, 14, 65538, 1245177, 14, 65540, 1245181, 14, 65538, 1179657, 14, 65540, 1179661, 14, 65538, 1310691, 14, 65538, 1310714, 14, 3, 1310715, 14, 3, 1310716, 14, 3, 1245193, 14, 65540, 1245197, 14, 65538, 1376227, 14, 65538, 1310727, 14, 131075, 1310728, 14, 131075, 1310729, 14, 131075, 1310733, 14, 65538, 1441757, 14, 3, 1441758, 14, 3, 1441759, 14, 3, 1441760, 14, 3, 1441761, 14, 3, 1441762, 14, 3, 1376262, 14, 65540, 1376269, 14, 65538, 1441798, 14, 65540, 1507334, 14, 65540, 1572871, 14, 3, 1572872, 14, 3, 1572873, 14, 3, 1572874, 14, 3, 1572875, 14, 3, 1572876, 14, 3, 1572877, 14, 3, 1572878, 14, 3, 1572879, 14, 3, 1572880, 14, 3 )

[node name="BTS_Grounded" parent="TileContainer" index="2" instance=ExtResource( 1 )]
energy_mode = 2

[node name="TileMap" parent="TileContainer/BTS_Grounded" index="0"]
modulate = Color( 0.682353, 0.372549, 0, 1 )

[node name="BTS_Uncolls01" parent="TileContainer" index="3" instance=ExtResource( 1 )]

[node name="TileMap" parent="TileContainer/BTS_Uncolls01" index="0"]
tile_set = ExtResource( 3 )

[node name="BTS_UncollsWallDecs" parent="TileContainer" index="4" instance=ExtResource( 1 )]

[node name="TileMap" parent="TileContainer/BTS_UncollsWallDecs" index="0"]
tile_set = ExtResource( 3 )

[node name="BTS_Uncolls02" parent="TileContainer" index="5" instance=ExtResource( 1 )]

[node name="TileMap" parent="TileContainer/BTS_Uncolls02" index="0"]
tile_set = ExtResource( 3 )

[node name="BTS_Glowing" parent="TileContainer" index="6" instance=ExtResource( 1 )]
has_glowables = true

[node name="TileMap" parent="TileContainer/BTS_Glowing" index="0"]
tile_set = ExtResource( 3 )

[node name="BTS_Blue" parent="TileContainer" index="7" instance=ExtResource( 1 )]

[node name="TileMap" parent="TileContainer/BTS_Blue" index="0"]
modulate = Color( 0.0705882, 0.454902, 1, 1 )

[node name="BTS_Green" parent="TileContainer" index="8" instance=ExtResource( 1 )]

[node name="TileMap" parent="TileContainer/BTS_Green" index="0"]
modulate = Color( 0.109804, 1, 0.0352941, 1 )
tile_data = PoolIntArray( -524277, 6, 0, -458741, 6, 0, -393205, 6, 0 )

[node name="BTS_Red" parent="TileContainer" index="9" instance=ExtResource( 1 )]

[node name="TileMap" parent="TileContainer/BTS_Red" index="0"]
modulate = Color( 1, 0.141176, 0.141176, 1 )
tile_data = PoolIntArray( -65525, 6, 0, 11, 6, 0, 65547, 6, 0, 917517, 8, 0, 983053, 8, 0, 1048589, 8, 0 )

[node name="BTS_Fragile" parent="TileContainer" index="10" instance=ExtResource( 1 )]
glass_breakable_type = 3

[node name="BTS_SimpleGlass" parent="TileContainer" index="11" instance=ExtResource( 1 )]
glass_breakable_type = 2

[node name="PCA_Rewind" parent="AreaRegionContainer" index="0" instance=ExtResource( 7 )]
position = Vector2( 876, 242 )

[node name="CollisionShape2D" parent="AreaRegionContainer/PCA_Rewind" index="0"]
position = Vector2( 84, 13 )
shape = SubResource( 1 )

[node name="PCA_BallLaunch" parent="AreaRegionContainer" index="1" instance=ExtResource( 7 )]
position = Vector2( 1325, 375 )

[node name="CollisionShape2D" parent="AreaRegionContainer/PCA_BallLaunch" index="0"]
position = Vector2( 83, 45 )
shape = SubResource( 2 )

[node name="PCA_Left" parent="AreaRegionContainer" index="2" instance=ExtResource( 7 )]
position = Vector2( 263, 684 )

[node name="CollisionShape2D" parent="AreaRegionContainer/PCA_Left" index="0"]
position = Vector2( 14.4375, 55.5625 )
shape = SubResource( 5 )

[node name="PCA_Right" parent="AreaRegionContainer" index="3" instance=ExtResource( 7 )]
position = Vector2( 449, -274 )

[node name="CollisionShape2D" parent="AreaRegionContainer/PCA_Right" index="0"]
position = Vector2( 56.0625, 47 )
shape = SubResource( 6 )

[node name="PCA_Stop" parent="AreaRegionContainer" index="4" instance=ExtResource( 7 )]
position = Vector2( -178, 492 )

[node name="CollisionShape2D" parent="AreaRegionContainer/PCA_Stop" index="0"]
position = Vector2( 21.4375, 47.5 )
shape = SubResource( 7 )

[node name="PCA_Zoom" parent="AreaRegionContainer" index="5" instance=ExtResource( 7 )]
position = Vector2( 944, -216 )

[node name="CollisionShape2D" parent="AreaRegionContainer/PCA_Zoom" index="0"]
position = Vector2( 16, 32.5 )
shape = SubResource( 9 )

[node name="ObjDAR_01" parent="AreaRegionContainer" index="6" instance=ExtResource( 10 )]
position = Vector2( 1316, 321 )

[node name="CollisionShape2D" parent="AreaRegionContainer/ObjDAR_01" index="0"]
position = Vector2( 60, 15 )
shape = SubResource( 3 )

[node name="ObjDAR_02" parent="AreaRegionContainer" index="7" instance=ExtResource( 10 )]
position = Vector2( 1336, 369 )

[node name="CollisionShape2D" parent="AreaRegionContainer/ObjDAR_02" index="0"]
position = Vector2( 3, 46.5 )
shape = SubResource( 8 )

[node name="ObjDAR_03" parent="AreaRegionContainer" index="8" instance=ExtResource( 10 )]
position = Vector2( -84, 256 )

[node name="CollisionShape2D" parent="AreaRegionContainer/ObjDAR_03" index="0"]
position = Vector2( -44, 11 )
shape = SubResource( 4 )

[node name="Pickupable_LaunchBall" parent="ObjectContainer" index="0" instance=ExtResource( 11 )]
position = Vector2( 275, 212 )
rotation = 3.14159
launch_ball_type = 2

[node name="Pickupable_LaunchBall2" parent="ObjectContainer" index="1" instance=ExtResource( 11 )]
position = Vector2( 625, 518 )
launch_ball_type = 2

[node name="Pickupable_LaunchBall3" parent="ObjectContainer" index="2" instance=ExtResource( 11 )]
position = Vector2( 738, -9 )
rotation = 3.14159
launch_ball_type = 2

[node name="Portal_Blue01" parent="ObjectContainer" index="3" instance=ExtResource( 6 )]
position = Vector2( 145, 304 )
portal_to_link_with__path = NodePath("../Portal_Blue02")

[node name="Portal_Blue02" parent="ObjectContainer" index="4" instance=ExtResource( 6 )]
position = Vector2( 687, 208 )
portal_to_link_with__path = NodePath("../Portal_Blue01")

[node name="Portal_WhiteExit" parent="ObjectContainer" index="5" instance=ExtResource( 6 )]
modulate = Color( 0.5, 0.5, 0.5, 0.85 )
position = Vector2( 781, 303 )
portal_color = 3
is_disabled = true

[node name="Portal_WhiteEntr01" parent="ObjectContainer" index="6" instance=ExtResource( 6 )]
position = Vector2( 527, 752 )
portal_color = 3
portal_to_link_with__path = NodePath("../Portal_WhiteExit")

[node name="Portal_WhiteEntr02" parent="ObjectContainer" index="7" instance=ExtResource( 6 )]
position = Vector2( 1554, 208 )
portal_color = 3
portal_to_link_with__path = NodePath("../Portal_WhiteExit")

[node name="Portal_WhiteEntr03" parent="ObjectContainer" index="8" instance=ExtResource( 6 )]
position = Vector2( 944, -243 )
portal_color = 3
portal_to_link_with__path = NodePath("../Portal_WhiteExit")

[node name="Portal_WhiteEntr04" parent="ObjectContainer" index="9" instance=ExtResource( 6 )]
position = Vector2( 266, -240 )
portal_color = 3
portal_to_link_with__path = NodePath("../Portal_WhiteExit")

[node name="Portal_WhiteEntr05" parent="ObjectContainer" index="10" instance=ExtResource( 6 )]
position = Vector2( -1070, 656 )
portal_color = 3
portal_to_link_with__path = NodePath("../Portal_WhiteExit")

[node name="Button_Red" parent="ObjectContainer" index="11" instance=ExtResource( 9 )]
position = Vector2( 1294, 372 )
rotation = 1.5708
body_mode_to_use = 1
ball_dispenser_01_to_register_in_toggle__path = NodePath("")
ball_dispenser_02_to_register_in_toggle__path = NodePath("")
button_color = 0

[node name="Button_Green" parent="ObjectContainer" index="12" instance=ExtResource( 9 )]
position = Vector2( -97, 209 )
rotation = 3.14159
body_mode_to_use = 1
ball_dispenser_01_to_register_in_toggle__path = NodePath("")
ball_dispenser_02_to_register_in_toggle__path = NodePath("")
button_color = 1

[node name="Pickupables_Coin" parent="CoinsContainer" index="0" instance=ExtResource( 4 )]
position = Vector2( -951, 263 )
rotation = 4.71239
ignore_is_disabled_by_assist_mode = false

[node name="Position2D" type="Position2D" parent="PlayerSpawnCoordsContainer" index="0"]
position = Vector2( -1244, 432 )
__meta__ = {
"_gizmo_extents_": 16.0
}

[node name="MiscContainer" type="Node" parent="." index="6"]

[node name="VKP_Rewind" parent="MiscContainer" index="0" instance=ExtResource( 8 )]
margin_left = 825.0
margin_top = 237.0
margin_right = 919.0
margin_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
update_keypress_label_based_on_game_control = false
plain_text = "rewind"

[node name="VKP_BallLaunch" parent="MiscContainer" index="1" instance=ExtResource( 8 )]
margin_left = 1352.0
margin_top = 260.0
margin_right = 1422.0
margin_bottom = 297.0
grow_horizontal = 2
grow_vertical = 2
update_keypress_label_based_on_game_control = false
plain_text = "ball"

[node name="VKP_Left" parent="MiscContainer" index="2" instance=ExtResource( 8 )]
margin_left = 335.0
margin_top = 621.0
margin_right = 405.0
margin_bottom = 658.0
grow_horizontal = 2
grow_vertical = 2
update_keypress_label_based_on_game_control = false
plain_text = "left"

[node name="VKP_Right" parent="MiscContainer" index="3" instance=ExtResource( 8 )]
margin_left = 455.0
margin_top = -161.0
margin_right = 537.0
margin_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
update_keypress_label_based_on_game_control = false
plain_text = "right"

[node name="VKP_Stop" parent="MiscContainer" index="4" instance=ExtResource( 8 )]
margin_left = -91.0
margin_top = 391.0
margin_right = -21.0
margin_bottom = 428.0
grow_horizontal = 2
grow_vertical = 2
update_keypress_label_based_on_game_control = false
plain_text = "stop"

[node name="VKP_Zoom" parent="MiscContainer" index="5" instance=ExtResource( 8 )]
margin_left = 957.0
margin_top = -107.0
margin_right = 1027.0
margin_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
update_keypress_label_based_on_game_control = false
plain_text = "zoom"

[node name="MousePressVisualTexRect" type="TextureRect" parent="MiscContainer" index="6"]
modulate = Color( 0.811765, 0.811765, 0.811765, 1 )
margin_left = -1008.0
margin_top = 247.0
margin_right = -987.0
margin_bottom = 282.0
texture = ExtResource( 12 )

[connection signal="collected_by_player" from="CoinsContainer/Pickupables_Coin" to="." method="_on_Pickupables_Coin_collected_by_player"]
[connection signal="uncollected_by_player" from="CoinsContainer/Pickupables_Coin" to="." method="_on_Pickupables_Coin_uncollected_by_player"]

[editable path="TileContainer/BTS_Normal"]
[editable path="TileContainer/BTS_Energized"]
[editable path="TileContainer/BTS_Grounded"]
[editable path="TileContainer/BTS_Uncolls01"]
[editable path="TileContainer/BTS_UncollsWallDecs"]
[editable path="TileContainer/BTS_Uncolls02"]
[editable path="TileContainer/BTS_Glowing"]
[editable path="TileContainer/BTS_Blue"]
[editable path="TileContainer/BTS_Green"]
[editable path="TileContainer/BTS_Red"]
[editable path="TileContainer/BTS_Fragile"]
[editable path="TileContainer/BTS_SimpleGlass"]
[editable path="AreaRegionContainer/PCA_Rewind"]
[editable path="AreaRegionContainer/PCA_BallLaunch"]
[editable path="AreaRegionContainer/PCA_Left"]
[editable path="AreaRegionContainer/PCA_Right"]
[editable path="AreaRegionContainer/PCA_Stop"]
[editable path="AreaRegionContainer/PCA_Zoom"]
[editable path="AreaRegionContainer/ObjDAR_01"]
[editable path="AreaRegionContainer/ObjDAR_02"]
[editable path="AreaRegionContainer/ObjDAR_03"]
